<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">In Shape</string>
    <string name="StartActivity">StartActivity</string>
    <string name="title_section1">BMI Calculator</string>
    <string name="title_section2">Ideal weight</string>
    <string name="title_section3">Calories needed</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="results">Your BMI is </string>
    <string name="KG"> KG </string>
    <string name="cm"> cm </string>
    <string name="title_activity_xactivity">xactivity</string>

</resources>
