<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
<TextView
        android:text="@string/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:id="@+id/weight"
         android:inputType="number"
         android:ems="20"
        />
    <TextView
        android:text="@string/KG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"/>
  </LinearLayout>
  

    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    <TextView
         android:text="@string/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"/>
<EditText 
     android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:id="@+id/height"
         android:inputType="number"
        android:ems="20"
    />

        <TextView
            android:text="@string/cm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>

</LinearLayout>

<!--
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
<TextView
         android:text="@string/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"/>
<EditText 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/age"
    android:inputType="number"
   android:ems="20"
    />
</LinearLayout>

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/gender"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gender">

        <RadioButton
            android:id="@+id/radiomale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Male"/>
        <RadioButton
            android:id="@+id/radiofemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Female"/>
    </RadioGroup>



</LinearLayout>
-->
    <Button
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Calculate"/>


    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/results"/>
    <EditText
        android:id="@+id/results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
